--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,10 @@
-<p>menu works!</p>
+<ul class="nav navbar-nav left">
+  <li><a routerLink="/home" data-toggle="collapse"
+        data-target=".navbar-collapse.in">Accueil</a></li>
+  <li><a routerLink="/frais/liste" data-toggle="collapse"
+        data-target=".navbar-collapse.in">Liste frais</a></li>
+</ul>
+<ul class="nav navbar-nav navbar-right">
+  <li><a routerLink="/login" data-toggle="collapse"
+        data-target=".navbar-collapse.in">Se Connecter</a></li>
+</ul>
